# TKURoboSot

./: .gitignore  README.md
epos_motion/: CMakeLists.txt  README.md  package.xml
epos_motion/epos_lib/: install.sh
epos_motion/include/: epos_motion.hpp
epos_motion/src/: HelloEposCmd.cpp  epos_motion.cpp  epos_motion_node.cpp
epos_motion/srv/: Reset.srv
fira_launch/default_config/: vision_better.yaml
fira_launch/launch/: main_launch.launch
imu_3d/: CMakeLists.txt
imu_3d/scripts/: py_imu3d
localization/: CMakeLists.txt
localization/reset/: CMakeLists.txt  NodeHandle.hpp
localization/transfer/: .DisplayImage.cpp.swp  CMakeLists.txt  DisplayImage.cpp  NodeHandle.hpp
strategy/: CMakeLists.txt  package.xml
strategy/FIRA_strategy/: CMakeLists.txt  FIRA_behavior.cpp  FIRA_behavior.h  FIRA_pathplan.cpp  FIRA_pathplan.h  strategy.cpp  strategy_nodeHandle.cpp  strategy_nodeHandle.h
strategy/FIRA_teamStrategy/: CMakeLists.txt
strategy/common/: BaseNode.cpp  BaseNode.h  Env.h
strategy/config/: param.yaml
strategy/py_strategy/: py_strategy  py_strategy~
strategy/py_team_strategy/: py_team_strategy  py_team_strategy~
strategy/script/: main.py  orbit.py  test.py  trace.py
vision/web_interface/: CMakeLists.txt  interface.cpp
vision/web_line/: CMakeLists.txt  white_and_black.cpp
vision/web_monitor/: CMakeLists.txt  monitor.cpp
vision/web_monitor_goalkeeper/: CMakeLists.txt
vision2/: CMakeLists.txt  package.xml
vision2/ml/: DataSetManager.cpp  DataSetManager.h  DetectCode.cpp  Train.cpp
vision2/src/: core.cpp  core.hpp  core_node.cpp
(+27 files in other folders)
